# FDIR

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties
.github/workflows/: build.yml
cmake/: code-coverage.cmake
fdir/: CMakeLists.txt  DummyLib.cpp
fdir/include/fdir/: DummyLib.h
fdir/tests/: CMakeLists.txt  DummyTest.cpp
test_app/: CMakeLists.txt  main.cpp
